Fix spacing mobile hero image default

--- a/src/postcss/blocks/hero-image.css
+++ b/src/postcss/blocks/hero-image.css
@@ -58,6 +58,7 @@
 
 .hero-image__content {
   width: 100%;
+  padding: 0 var(--container-gutter);
 }
 
 .hero-image--dark {
